--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=9000
 spring.data.mongodb.database=books-mongo
 spring.data.mongodb.port=27017
-graphql.graphiql.enabled=true
+spring.graphql.graphiql.enabled=true
